Fix pseudo-selector not working on IE8.

--- a/scss/_utilities/_mixins.scss
+++ b/scss/_utilities/_mixins.scss
@@ -13,7 +13,7 @@
 // Micro-clearfix mixin.
 // See: http://goo.gl/y82qLF
 @mixin clearfix {
-  &::after {
+  &:after {
     clear: both;
     content: "";
     display: table;
